LU-1727 lprocfs: fix an old assertion

lprocfs_counter_add() can be called in interrupt context, as a memory
allocation can trigger memory shrinker call ldlm_pool_shrink(), which
calls lprocfs_counter_add().

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I0f5d3e07c234f7d615ca87761a7bd6367e72beac
Reviewed-on: http://review.whamcloud.com/3597
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Liang Zhen <liang@whamcloud.com>